--- a/SDDVR/viewpointGuiding/ssim_test.ipynb
+++ b/SDDVR/viewpointGuiding/ssim_test.ipynb
@@ -1,1 +1,154 @@
 
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5777726231046171\n",
+      "0.5793196224441196\n",
+      "0.49476609318792303\n",
+      "0.6307202632715424\n",
+      "0.5459651682576641\n",
+      "0.3355764917040352\n",
+      "0.509021141131945\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2, enum, time, os, math\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import rankdata\n",
+    "from scipy import spatial\n",
+    "\n",
+    "#############################################################################\n",
+    "#   User variables (static)\n",
+    "#############################################################################\n",
+    "class PltFunc :\n",
+    "    def plot1row2Img(img1, img2):\n",
+    "        fig = plt.figure(figsize=(8, 4))\n",
+    "        fig.add_subplot(1,2,1)\n",
+    "        plt.imshow(img1)\n",
+    "        fig.add_subplot(1,2,2)\n",
+    "        plt.imshow(img2)\n",
+    "        plt.show()    \n",
+    "\n",
+    "class ALG(enum.Enum):\n",
+    "    MAE   = 0\n",
+    "    MSE   = 1\n",
+    "    RMSE  = 2\n",
+    "    PSNR  = 3\n",
+    "    SSIM  = 4\n",
+    "    P_MSE = 5    \n",
+    "    \n",
+    "class ImgCompare :\n",
+    "    def cvt256gray(img) :\n",
+    "        img = cv2.resize(img, (320,240), interpolation=cv2.INTER_LINEAR )\n",
+    "        img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "        return img\n",
+    "    \n",
+    "    def mae(img1, img2):\n",
+    "        img1 = ImgCompare.cvt256gray(img1)\n",
+    "        img2 = ImgCompare.cvt256gray(img2)\n",
+    "        err = np.sum(abs((img1.astype(\"float\") - img2.astype(\"float\"))))\n",
+    "        err /= float(img1.shape[0] * img1.shape[1])\n",
+    "        return err\n",
+    "\n",
+    "    def mse(img1, img2):\n",
+    "        img1 = ImgCompare.cvt256gray(img1)\n",
+    "        img2 = ImgCompare.cvt256gray(img2)\n",
+    "        err = np.sum((img1.astype(\"float\") - img2.astype(\"float\")) ** 2)\n",
+    "        err /= float(img1.shape[0] * img1.shape[1])\n",
+    "        return err\n",
+    "\n",
+    "    def p_mse(img1, img2):\n",
+    "        img1 = ImgCompare.cvt256gray(img1)\n",
+    "        img2 = ImgCompare.cvt256gray(img2)\n",
+    "        maxval = np.max((img1.astype(\"float\") - img2.astype(\"float\")) ** 2)\n",
+    "        err = np.sum((img1.astype(\"float\") - img2.astype(\"float\")) ** 2)\n",
+    "        err /= float(img1.shape[0] * img1.shape[1])\n",
+    "        return err/maxval\n",
+    "\n",
+    "    def rmse(img1, img2):\n",
+    "        err = ImgCompare.mse(img1, img2)\n",
+    "        return math.sqrt(err)\n",
+    "\n",
+    "    def psnr(img1, img2):\n",
+    "        _rmse = ImgCompare.rmse(img1,img2)\n",
+    "        if _rmse == 0:\n",
+    "            return 100\n",
+    "        PIXEL_MAX = 255.0\n",
+    "        return 20 * math.log10(PIXEL_MAX / _rmse)\n",
+    "    \n",
+    "    def p_cosSim(img1, img2):\n",
+    "        i1 = img1.flatten()\n",
+    "        i2 = img2.flatten()\n",
+    "        s = spatial.distance.cosine(i2, i1)\n",
+    "        s = abs(s)\n",
+    "        return s\n",
+    "    \n",
+    "\n",
+    "    def percent_ssim(img1, img2) :\n",
+    "        from skimage.measure import compare_ssim as ssim\n",
+    "        img1 = cv2.resize(img1, (256,256), interpolation=cv2.INTER_LINEAR )\n",
+    "        img2 = cv2.resize(img2, (256,256), interpolation=cv2.INTER_LINEAR )\n",
+    "        s = ssim(img1,img2, multichannel = True)\n",
+    "        return s\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    imgarr1 = [\"t/11.png\", \"t/21.png\", \"t/31.png\", \"t/41.png\", \"t/51.png\", \"t/61.png\", \"t/71.png\"]\n",
+    "    imgarr2 = [\"t/12.png\", \"t/22.png\", \"t/32.png\", \"t/42.png\", \"t/52.png\", \"t/62.png\", \"t/72.png\"]\n",
+    "    \n",
+    "    for i in range(len(imgarr1)):\n",
+    "        img1 = cv2.imread(imgarr1[i])\n",
+    "        img2 = cv2.imread(imgarr2[i])\n",
+    "        img1 = cv2.cvtColor(img1, cv2.COLOR_BGR2RGB)\n",
+    "        img2 = cv2.cvtColor(img2, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "        ttt = ImgCompare.percent_ssim(img1, img2)\n",
+    "        print(ttt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
