--- a/VRvis/Confused student_CNN.ipynb
+++ b/VRvis/Confused student_CNN.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('C:/Users/SoobinYim/workspace/Confusion during MOOC/EEG_data.csv')\n",
+    "data = pd.read_csv('.../EEG_data.csv')\n",
     "df=pd.DataFrame(data)"
    ]
   },
