--- a/VRvis/Confused student_CNN2.ipynb
+++ b/VRvis/Confused student_CNN2.ipynb
@@ -325,7 +325,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('C:/Users/수빈/env/Confusion during MOOC/EEG_data.csv')\n",
+    "data = pd.read_csv('.../EEG_data.csv')\n",
     "data"
    ]
   },
