--- a/VRvis/Confused student_DNN.ipynb
+++ b/VRvis/Confused student_DNN.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "from numpy import genfromtxt\n",
-    "EEG = genfromtxt(\"C:/Users/SoobinYim/workspace/Confusion during MOOC/EEG_data.csv\", delimiter=\",\")"
+    "EEG = genfromtxt(\".../EEG_data.csv\", delimiter=\",\")"
    ]
   },
   {
