--- a/VRvis/MNIST_MindBigData_CNN.ipynb
+++ b/VRvis/MNIST_MindBigData_CNN.ipynb
@@ -688,6 +688,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "img = Image.fromarray(data[0], 'RGB')\n",
+    "img.save('my.png')\n",
+    "img.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
    "outputs": [
