--- a/VRvis/CognitiveMentalWorkloadEEGData.ipynb
+++ b/VRvis/CognitiveMentalWorkloadEEGData.ipynb
@@ -1084,6 +1084,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(428446, 14, 1) (183620, 14, 1) (428446, 5) (183620, 5)\n",
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "lstm_2 (LSTM)                (None, 14, 50)            10400     \n",
+      "_________________________________________________________________\n",
+      "lstm_3 (LSTM)                (None, 5)                 1120      \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 5)                 0         \n",
+      "=================================================================\n",
+      "Total params: 11,520\n",
+      "Trainable params: 11,520\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "#X_train = X_train.reshape(X_train.shape+ (1,))\n",
+    "#X_test = X_test.reshape(X_test.shape + (1,))\n",
+    "\n",
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)\n",
+    "\n",
+    "def lstm_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(LSTM(50, input_shape = (14,1), return_sequences = True))\n",
+    "    model.add(LSTM(5, return_sequences = False))\n",
+    "    model.add(Activation('sigmoid'))\n",
+    "    \n",
+    "    model.compile(loss = 'binary_crossentropy', optimizer = 'adam', metrics = ['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "model = lstm_model()\n",
+    "\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "42382/42845 [============================>.] - ETA: 1s - loss: 0.5132 - accuracy: 0.2304"
+     ]
+    }
+   ],
+   "source": [
+    "hist=model.fit(X_train, y_train, epochs=20, batch_size=10, validation_data=(X_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist=model.fit(X_train, y_train, epochs=20, batch_size=10, validation_data=(X_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
