--- a/VolumeClustering/2Dhistogram_tSNE.ipynb
+++ b/VolumeClustering/2Dhistogram_tSNE.ipynb
@@ -1,1 +1,389 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from struct import unpack\n",
+    "from sklearn import cluster\n",
+    "import datetime\n",
+    "import hdbscan\n",
+    "import seaborn as sns\n",
+    "from sklearn.preprocessing import PowerTransformer, normalize, MinMaxScaler, StandardScaler\n",
+    "from tsnecuda import TSNE\n",
+    "from struct import pack\n",
+    "from sklearn_extra.cluster import KMedoids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform(_in) :\n",
+    "    #vg / h 분리\n",
+    "    np_vgh = _in\n",
+    "    np_vg = np.delete(_in, 2, axis = 1) #3열 삭제\n",
+    "    np_h = (_in[:,2]).reshape(-1,1) #3열 추출\n",
+    "    #log(h)\n",
+    "    np_logh = np.log(np_h[::]+1)\n",
+    "    #logh 병합\n",
+    "    np_vgh_logh = np.hstack((np_vgh,np_logh))\n",
+    "    # normalized v,g,h,logh\n",
+    "    np_normal_l1_vgh_logh = normalize(np_vgh_logh, axis=0, norm='l1')\n",
+    "    np_normal_l2_vgh_logh = normalize(np_vgh_logh, axis=0, norm='l2')\n",
+    "    np_normal_max_vgh_logh = normalize(np_vgh_logh, axis=0, norm='max')\n",
+    "    #tr standardization\n",
+    "    std_scaler = StandardScaler()\n",
+    "    fitted = std_scaler.fit(np_vgh_logh)\n",
+    "    np_std_vgh_logh = std_scaler.transform(np_vgh_logh)\n",
+    "    #print(np_std_vgh_logh)\n",
+    "    #tr min-max scale\n",
+    "    min_max_scaler = MinMaxScaler()\n",
+    "    min_max_scaler.fit(np_vgh_logh)\n",
+    "    np_min_max_vgh_logh=min_max_scaler.transform(np_vgh_logh)\n",
+    "    #print(np_min_max_vgh_logh)\n",
+    "    #yeo-johnson\n",
+    "    pt_vgh_logh = PowerTransformer(method='yeo-johnson')\n",
+    "    pt_vgh_logh.fit(np_vgh_logh)\n",
+    "    np_yeojohnson_vgh_logh = pt_vgh_logh.transform(np_vgh_logh)\n",
+    "\n",
+    "    ret = []\n",
+    "    ret.append(  _in                                  )  \n",
+    "    ret.append(  np.delete(np_vgh_logh, 2, axis = 1)                   )\n",
+    "    ret.append(  np.hstack((np_normal_l1_vgh_logh[:,[0,1]], np_h))     )\n",
+    "    ret.append(  np.hstack((np_normal_l1_vgh_logh[:,[0,1]], np_logh))  ) \n",
+    "    ret.append(  np.delete(np_normal_l1_vgh_logh, 2, axis = 1)         )\n",
+    "    ret.append(  np.delete(np_normal_l1_vgh_logh, 3, axis = 1)         )\n",
+    "    ret.append(  np.hstack((np_normal_l2_vgh_logh[:,[0,1]], np_h))     )\n",
+    "    ret.append(  np.hstack((np_normal_l2_vgh_logh[:,[0,1]], np_logh))  )\n",
+    "    ret.append(  np.delete(np_normal_l2_vgh_logh, 2, axis = 1)         )  \n",
+    "    ret.append(  np.delete(np_normal_l2_vgh_logh, 3, axis = 1)         )\n",
+    "    ret.append(  np.hstack((np_normal_max_vgh_logh[:,[0,1]], np_h))    )     \n",
+    "    ret.append(  np.hstack((np_normal_max_vgh_logh[:,[0,1]], np_logh)) )    \n",
+    "    ret.append(  np.delete(np_normal_max_vgh_logh, 2, axis = 1)        )\n",
+    "    ret.append(  np.delete(np_normal_max_vgh_logh, 3, axis = 1)        ) \n",
+    "    ret.append(  np.hstack((np_std_vgh_logh[:,[0,1]], np_h))           )\n",
+    "    ret.append(  np.hstack((np_std_vgh_logh[:,[0,1]], np_logh))        )\n",
+    "    ret.append(  np.delete(np_std_vgh_logh, 2, axis = 1)               )   \n",
+    "    ret.append(  np.delete(np_std_vgh_logh, 3, axis = 1)               )\n",
+    "    ret.append(  np.hstack((np_min_max_vgh_logh[:,[0,1]], np_h))       )     \n",
+    "    ret.append(  np.hstack((np_min_max_vgh_logh[:,[0,1]], np_logh))    )     \n",
+    "    ret.append(  np.delete(np_min_max_vgh_logh, 2, axis = 1)           )     \n",
+    "    ret.append(  np.delete(np_min_max_vgh_logh, 3, axis = 1)           )       \n",
+    "    ret.append(  np.hstack((np_yeojohnson_vgh_logh[:,[0,1]], np_h))    )         \n",
+    "    ret.append(  np.hstack((np_yeojohnson_vgh_logh[:,[0,1]], np_logh)) )          \n",
+    "    ret.append(  np.delete(np_yeojohnson_vgh_logh, 2, axis = 1)        )         \n",
+    "    ret.append(  np.delete(np_yeojohnson_vgh_logh, 3, axis = 1)        )      \n",
+    "    \n",
+    "    return ret\n",
+    "\n",
+    "\n",
+    "def _TSNE(learning_rate, data) :\n",
+    "    model = TSNE(learning_rate=learning_rate)\n",
+    "    print(\"TSNE calc : \", end='')\n",
+    "    startTime = datetime.datetime.now()\n",
+    "    transformed = model.fit_transform(data)\n",
+    "    endTime = datetime.datetime.now()\n",
+    "    diffTime = endTime-startTime\n",
+    "    exeTime = diffTime.total_seconds() * 1000\n",
+    "    print(exeTime,'ms')\n",
+    "    return transformed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abdomen_256x256x128_0_sparse_vgh\tTSNE calc : 2507.176 ms\n",
+      "abdomen_256x256x128_1_sparse_vglogh\tTSNE calc : 751.013 ms\n",
+      "abdomen_256x256x128_2_sparse_n_l1_vg_h\tTSNE calc : 920.562 ms\n",
+      "abdomen_256x256x128_3_sparse_n_l1_vg_logh\tTSNE calc : 919.006 ms\n",
+      "abdomen_256x256x128_4_sparse_n_l1_vgh\tTSNE calc : 739.913 ms\n",
+      "abdomen_256x256x128_5_sparse_n_l1_vglogh\tTSNE calc : 722.429 ms\n",
+      "abdomen_256x256x128_6_sparse_n_l2_vg_h\tTSNE calc : 742.0949999999999 ms\n",
+      "abdomen_256x256x128_7_sparse_n_l2_vg_logh\tTSNE calc : 740.8090000000001 ms\n",
+      "abdomen_256x256x128_8_sparse_n_l2_vgh\tTSNE calc : 776.139 ms\n",
+      "abdomen_256x256x128_9_sparse_n_l2_vglogh\tTSNE calc : 709.9140000000001 ms\n",
+      "abdomen_256x256x128_10_sparse_n_max_vg_h\tTSNE calc : 734.274 ms\n",
+      "abdomen_256x256x128_11_sparse_n_max_vg_logh\tTSNE calc : 739.37 ms\n",
+      "abdomen_256x256x128_12_sparse_n_max_vgh\tTSNE calc : 728.711 ms\n",
+      "abdomen_256x256x128_13_sparse_n_max_vglogh\tTSNE calc : 712.611 ms\n",
+      "abdomen_256x256x128_14_sparse_std_vg_h\tTSNE calc : 735.746 ms\n",
+      "abdomen_256x256x128_15_sparse_std_vg_logh\tTSNE calc : 788.123 ms\n",
+      "abdomen_256x256x128_16_sparse_std_vgh\tTSNE calc : 759.0989999999999 ms\n",
+      "abdomen_256x256x128_17_sparse_std_vglogh\tTSNE calc : 722.692 ms\n",
+      "abdomen_256x256x128_18_sparse_mm_vg_h\tTSNE calc : 741.519 ms\n",
+      "abdomen_256x256x128_19_sparse_mm_vg_logh\tTSNE calc : 737.698 ms\n",
+      "abdomen_256x256x128_20_sparse_mm_vgh\tTSNE calc : 729.192 ms\n",
+      "abdomen_256x256x128_21_sparse_mm_vglogh\tTSNE calc : 707.2929999999999 ms\n",
+      "abdomen_256x256x128_22_sparse_pt_vg_h\tTSNE calc : 745.675 ms\n",
+      "abdomen_256x256x128_23_sparse_pt_vg_logh\tTSNE calc : 731.0100000000001 ms\n",
+      "abdomen_256x256x128_24_sparse_pt_vgh\tTSNE calc : 767.817 ms\n",
+      "abdomen_256x256x128_25_sparse_pt_vglogh\tTSNE calc : 728.5 ms\n",
+      "[array([[-30.246231, -23.723412],\n",
+      "       [-30.104012, -26.503094],\n",
+      "       [-30.243969, -23.273706],\n",
+      "       ...,\n",
+      "       [-24.833277,  17.518328],\n",
+      "       [-24.625883,  17.30773 ],\n",
+      "       [-25.608864,  18.375145]], dtype=float32), array([[ 31.159609  , -22.335173  ],\n",
+      "       [ 31.203732  , -22.306822  ],\n",
+      "       [ 31.281063  , -22.291021  ],\n",
+      "       ...,\n",
+      "       [  1.7231133 , -18.841286  ],\n",
+      "       [  1.9176786 , -18.927193  ],\n",
+      "       [  0.99054635, -18.681877  ]], dtype=float32), array([[-24.54944  ,  25.312553 ],\n",
+      "       [-22.213737 ,  25.052988 ],\n",
+      "       [-24.88972  ,  25.341635 ],\n",
+      "       ...,\n",
+      "       [ -2.3609786,  12.849324 ],\n",
+      "       [ -2.5972033,  12.969953 ],\n",
+      "       [ -1.9352208,  12.635121 ]], dtype=float32), array([[  2.3658404 , -20.282648  ],\n",
+      "       [  0.15641668, -21.86358   ],\n",
+      "       [  2.7780056 , -20.106482  ],\n",
+      "       ...,\n",
+      "       [ -9.502643  , -20.581293  ],\n",
+      "       [ -9.901308  , -20.580088  ],\n",
+      "       [ -8.99256   , -20.55665   ]], dtype=float32), array([[-39.242958 ,  -9.339431 ],\n",
+      "       [-39.144814 ,  -9.128339 ],\n",
+      "       [-39.255096 ,  -9.368637 ],\n",
+      "       ...,\n",
+      "       [ -2.2325833,  15.546983 ],\n",
+      "       [ -2.5242975,  15.550894 ],\n",
+      "       [ -1.7860098,  15.496744 ]], dtype=float32), array([[-39.594917, -12.06383 ],\n",
+      "       [-37.801277, -14.01894 ],\n",
+      "       [-39.81623 , -11.808589],\n",
+      "       ...,\n",
+      "       [-28.267572, -29.348986],\n",
+      "       [-27.971777, -29.45119 ],\n",
+      "       [-28.862822, -29.103693]], dtype=float32), array([[-26.360853 ,  -4.2095466],\n",
+      "       [-25.710693 ,  -6.631285 ],\n",
+      "       [-26.427357 ,  -3.8969443],\n",
+      "       ...,\n",
+      "       [-12.364482 , -17.276403 ],\n",
+      "       [-12.131898 , -17.556    ],\n",
+      "       [-12.600947 , -16.919699 ]], dtype=float32), array([[-25.885935 ,  18.196148 ],\n",
+      "       [-25.937677 ,  15.510322 ],\n",
+      "       [-25.852776 ,  18.640476 ],\n",
+      "       ...,\n",
+      "       [-10.743436 ,  -4.0788884],\n",
+      "       [-10.453278 ,  -3.877574 ],\n",
+      "       [-11.178832 ,  -4.4296393]], dtype=float32), array([[-34.619465,  20.081923],\n",
+      "       [-34.389473,  20.258413],\n",
+      "       [-34.65632 ,  20.054983],\n",
+      "       ...,\n",
+      "       [ 23.033413, -29.724749],\n",
+      "       [ 22.91558 , -30.064192],\n",
+      "       [ 23.16278 , -29.129072]], dtype=float32), array([[  9.369275, -40.772285],\n",
+      "       [ 10.76233 , -38.52667 ],\n",
+      "       [  9.175433, -41.059925],\n",
+      "       ...,\n",
+      "       [-35.944893, -17.548754],\n",
+      "       [-35.949383, -17.921753],\n",
+      "       [-35.871597, -17.003351]], dtype=float32), array([[  5.923181 , -26.853111 ],\n",
+      "       [  6.756194 , -24.533442 ],\n",
+      "       [  5.8191304, -27.206465 ],\n",
+      "       ...,\n",
+      "       [-19.19296  ,  -7.087576 ],\n",
+      "       [-19.092268 ,  -6.794809 ],\n",
+      "       [-19.517378 ,  -8.302807 ]], dtype=float32), array([[-23.030357 , -33.128876 ],\n",
+      "       [-25.757845 , -15.704615 ],\n",
+      "       [-23.401936 , -32.855488 ],\n",
+      "       ...,\n",
+      "       [-10.584512 ,  11.4276285],\n",
+      "       [-10.214027 ,  11.739524 ],\n",
+      "       [-11.540075 ,  10.721783 ]], dtype=float32), array([[ 37.87142 ,  11.334325],\n",
+      "       [ 37.920788,  11.104274],\n",
+      "       [ 37.86469 ,  11.368297],\n",
+      "       ...,\n",
+      "       [-11.84917 ,   8.576744],\n",
+      "       [-11.861745,   8.331504],\n",
+      "       [-11.876289,   9.245343]], dtype=float32), array([[ 34.49026  ,   3.8452685],\n",
+      "       [ 34.5387   ,   3.7018015],\n",
+      "       [ 34.51642  ,   3.889053 ],\n",
+      "       ...,\n",
+      "       [ -9.643297 ,  -9.688152 ],\n",
+      "       [-10.089388 ,  -9.683143 ],\n",
+      "       [ -9.198232 ,  -9.7950945]], dtype=float32), array([[-25.163397 ,  16.873404 ],\n",
+      "       [-23.690283 ,  15.04476  ],\n",
+      "       [-25.306793 ,  17.223726 ],\n",
+      "       ...,\n",
+      "       [ -8.4800825, -15.1127405],\n",
+      "       [ -8.47429  , -15.500842 ],\n",
+      "       [ -8.553288 , -14.301733 ]], dtype=float32), array([[-14.444048,  39.663948],\n",
+      "       [-14.559069,  39.42116 ],\n",
+      "       [-14.430455,  39.695965],\n",
+      "       ...,\n",
+      "       [-10.436534, -24.121449],\n",
+      "       [-10.412844, -24.473259],\n",
+      "       [-10.459789, -23.499144]], dtype=float32), array([[-27.891241, -28.443058],\n",
+      "       [-27.833832, -28.140871],\n",
+      "       [-27.900698, -28.476099],\n",
+      "       ...,\n",
+      "       [ 36.32183 ,  17.337992],\n",
+      "       [ 36.494366,  17.031199],\n",
+      "       [ 36.002518,  17.88736 ]], dtype=float32), array([[-41.706993,  -9.805152],\n",
+      "       [-32.657936, -27.000425],\n",
+      "       [-41.828876,  -9.499818],\n",
+      "       ...,\n",
+      "       [ 36.820755,  17.467295],\n",
+      "       [ 36.731667,  17.157923],\n",
+      "       [ 37.03135 ,  17.989403]], dtype=float32), array([[-23.814056 ,   4.25687  ],\n",
+      "       [-26.75294  ,   3.6377044],\n",
+      "       [-23.445562 ,   4.3091044],\n",
+      "       ...,\n",
+      "       [ -1.0093863,   9.3940735],\n",
+      "       [ -1.0987277,   9.125465 ],\n",
+      "       [ -0.6990696,  10.225291 ]], dtype=float32), array([[30.040707 , 25.001352 ],\n",
+      "       [27.007809 , 27.562902 ],\n",
+      "       [30.72428  , 24.935524 ],\n",
+      "       ...,\n",
+      "       [ 6.6954913, 19.685509 ],\n",
+      "       [ 6.4169264, 19.916803 ],\n",
+      "       [ 7.3612437, 18.784843 ]], dtype=float32), array([[-14.584944 ,  -6.4799294],\n",
+      "       [-14.618397 ,  -6.18062  ],\n",
+      "       [-14.59408  ,  -6.514845 ],\n",
+      "       ...,\n",
+      "       [-11.235183 , -16.029087 ],\n",
+      "       [-11.543244 , -16.179857 ],\n",
+      "       [-10.408828 , -15.546108 ]], dtype=float32), array([[-14.697653,  15.926238],\n",
+      "       [-14.85554 ,  16.083517],\n",
+      "       [-14.699039,  15.86719 ],\n",
+      "       ...,\n",
+      "       [ -8.757039, -10.454376],\n",
+      "       [ -8.936124, -10.808767],\n",
+      "       [ -8.253235,  -9.358134]], dtype=float32), array([[ -8.264677  ,   1.6768696 ],\n",
+      "       [-10.034929  ,   0.21122178],\n",
+      "       [ -8.01258   ,   1.9493655 ],\n",
+      "       ...,\n",
+      "       [ 12.610506  ,  14.104195  ],\n",
+      "       [ 12.856125  ,  14.1774435 ],\n",
+      "       [ 10.793194  ,  13.176973  ]], dtype=float32), array([[  5.2345   , -22.138083 ],\n",
+      "       [  5.3925314, -22.239956 ],\n",
+      "       [  5.205721 , -22.119654 ],\n",
+      "       ...,\n",
+      "       [ 38.001953 ,  -3.5703871],\n",
+      "       [ 38.25977  ,  -3.4460108],\n",
+      "       [ 36.20939  ,  -3.8730438]], dtype=float32), array([[ 24.068806, -27.042967],\n",
+      "       [ 24.377089, -26.92314 ],\n",
+      "       [ 23.92103 , -27.097359],\n",
+      "       ...,\n",
+      "       [-15.501326,  29.172775],\n",
+      "       [-15.66206 ,  28.948195],\n",
+      "       [-14.116706,  30.798443]], dtype=float32), array([[ 26.999756, -26.429993],\n",
+      "       [ 27.174053, -26.25334 ],\n",
+      "       [ 26.887028, -26.528889],\n",
+      "       ...,\n",
+      "       [-13.410351,  32.480152],\n",
+      "       [-13.603082,  32.29096 ],\n",
+      "       [-11.915817,  33.544205]], dtype=float32)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "index = [\"vgh\", \"vglogh\", \n",
+    "         \"n_l1_vg_h\", \"n_l1_vg_logh\", \"n_l1_vgh\", \"n_l1_vglogh\", \n",
+    "         \"n_l2_vg_h\", \"n_l2_vg_logh\", \"n_l2_vgh\", \"n_l2_vglogh\", \n",
+    "         \"n_max_vg_h\", \"n_max_vg_logh\", \"n_max_vgh\", \"n_max_vglogh\", \n",
+    "         \"std_vg_h\", \"std_vg_logh\", \"std_vgh\", \"std_vglogh\", \n",
+    "         \"mm_vg_h\", \"mm_vg_logh\", \"mm_vgh\", \"mm_vglogh\", \n",
+    "         \"pt_vg_h\", \"pt_vg_logh\", \"pt_vgh\", \"pt_vglogh\"\n",
+    "        ]\n",
+    "\n",
+    "w=256\n",
+    "h=256\n",
+    "size = w*h\n",
+    "\n",
+    "all_val_grad_hist = []\n",
+    "sparse_val_grad_hist = []\n",
+    "#'VisMale_128x256x256','bonsai256X256X256B', 'Carp_256x256x512','XMasTree-LO_256x249x256' \n",
+    "for dataset in ['abdomen_256x256x128'] :\n",
+    "    with open('../volumeCache/%s.raw.2DHistogram.TextureCache'%(dataset), 'rb') as fp:\n",
+    "        Histogram2DYMax = unpack('<f', fp.read(4))[0] #Max of Grad_mag\n",
+    "        for i in range(h) :\n",
+    "            for j in range(w):\n",
+    "                readdata = unpack('<L', fp.read(4))[0]\n",
+    "                all_val_grad_hist.append([i, j, readdata])\n",
+    "                if readdata>=1 and i!=0:\n",
+    "                    sparse_val_grad_hist.append([i, j, readdata])\n",
+    "\n",
+    "        np_all_val_grad_hist = np.array(all_val_grad_hist)\n",
+    "        np_sparse_val_grad_hist = np.array(sparse_val_grad_hist)\n",
+    "\n",
+    "        ret_all_array = transform(np_all_val_grad_hist)\n",
+    "        ret_sparse_array = transform(np_sparse_val_grad_hist)\n",
+    "        \n",
+    "        tsne_all_array = []\n",
+    "        tsne_sparse_array = []\n",
+    "        \n",
+    "        ###########################################################################################################\n",
+    "        \n",
+    "        #for i in range(len(ret_all_array)):\n",
+    "        #    print(\"%d_%s_%s\"% (i, dataset, index[i]), end='\\t')\n",
+    "        #    tsne_all_array.append(_TSNE(100,ret_all_array[i]))\n",
+    "        \n",
+    "        #for i in range(len(tsne_all_array)):\n",
+    "        #    save_tsne_result( tsne_all_array[i],  \"tsneCache\", \"%d_%s_%s\"% (i, dataset, index[i]) )\n",
+    "        \n",
+    "        #for i in range(len(tsne_all_array)):\n",
+    "        #    for _k in [10,15,20]:\n",
+    "        #        kmeans(_k,  tsne_all_array[i], np_all_val_grad_hist, 256,256,  \"%d_%s_%s\"% (i, dataset, index[i]) )\n",
+    "        #    \n",
+    "        #    for _eps in [0.5, 1.0, 1.5, 3.0]:\n",
+    "        #        dbscan(_eps, tsne_all_array[i], np_all_val_grad_hist, 256,256,  \"%d_%s_%s\"% (i, dataset, index[i]))\n",
+    "        #    Hdbscan(300, 20, 1.0, tsne_all_array[i], np_all_val_grad_hist, 256,256,  \"%d_%s_%s\"% (i, dataset, index[i])  ) # *\n",
+    "            \n",
+    "        ###########################################################################################################\n",
+    "        \n",
+    "        for i in range(len(ret_sparse_array)):\n",
+    "            print(\"%s_%d_sparse_%s\"% ( dataset, i,index[i]), end='\\t')\n",
+    "            tsne_sparse_array.append(_TSNE(100,ret_sparse_array[i]))\n",
+    "            \n",
+    "np_tsne_sparse_array = np.array(tsne_sparse_array)\n",
+    "print(tsne_sparse_array)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.8"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
