--- a/3DBPP/ActorCritic/train_multi_agent.ipynb
+++ b/3DBPP/ActorCritic/train_multi_agent.ipynb
@@ -50,10 +50,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60b4d917",
+   "id": "d6ab7c0c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class DQNAgent:\n",
+    "    def __init__(self, L=20, B=20, H=20, n_remains = 5, n_loading=3, n_channel = 6, max_size = 64,\n",
+    "                 lr=1e-8, batch_size = 32, exp_steps=500, train_st = 200, memory_len=500, update_target_rate = 30, net='DNN' ):\n",
+    "        self.state_size = (L, B, 3)\n",
+    "        self.selected_size = (L, B, n_loading)\n",
+    "        self.remain_size = (n_remains, max_size ,n_channel) #(L, B, n_remains)\n",
+    "        self.loading_size = (n_loading, max_size ,n_channel//2) # (L, B, n_loading)\n",
+    "        self.cbm_size = (1 + n_remains*2 + n_loading,)\n",
+    "        self.output_size = 1 #math.factorial(c_boxes_size)\n",
+    "        # hyperparameters\n",
+    "        self.discount_factor = 0.99\n",
+    "        self.learning_rate = lr#1e-8#1e-4\n",
+    "        self.epsilon = 1.\n",
+    "        self.epsilon_start, self.epsilon_end = 1.0, 0.01\n",
+    "        self.exploration_steps = exp_steps\n",
+    "        self.epsilon_decay_step = self.epsilon_start - self.epsilon_end\n",
+    "        self.epsilon_decay_step /= self.exploration_steps\n",
+    "        self.batch_size = batch_size\n",
+    "        self.train_start = train_st\n",
+    "        self.update_target_rate = update_target_rate\n",
+    "        self.beta = 0.2\n",
+    "        self.memory = deque(maxlen=memory_len) # replay memory\n",
+    "        self.net = net\n",
+    "        self.vmin = 0#-0.02\n",
+    "        self.vmax = 1\n",
+    "        self.nsup = 51#52\n",
+    "        self.dz = (self.vmax - self.vmin)/(self.nsup - 1.)\n",
+    "        self.z = np.linspace(self.vmin,self.vmax,self.nsup)\n",
+    "        self.gamma = 0.9\n",
+    "        self.criterion = tf.keras.losses.CategoricalCrossentropy()\n",
+    "        self.dist = False\n",
+    "        # model\n",
+    "        if net == 'DNN':\n",
+    "            self.model = DQN_DNN(self.state_size, self.selected_size, self.remain_size, self.loading_size, self.output_size)\n",
+    "            self.target_model = DQN_DNN(self.state_size, self.selected_size, self.remain_size, self.loading_size, self.output_size)\n",
+    "        elif net =='CNN':\n",
+    "            self.model = DQN_CNN(self.state_size, self.selected_size, self.remain_size, self.loading_size, self.output_size)\n",
+    "            self.target_model = DQN_CNN(self.state_size, self.selected_size, self.remain_size, self.loading_size, self.output_size)\n",
+    "        elif net =='CNNDNN':\n",
+    "            self.model = DQN_CNNDNN(self.state_size, self.selected_size, self.remain_size, self.loading_size, self.output_size)\n",
+    "            self.target_model = DQN_CNNDNN(self.state_size, self.selected_size, self.remain_size, self.loading_size, self.output_size)\n",
+    "        # distributed q learning\n",
+    "        elif net == 'DDQN_DNN':\n",
+    "            self.model = DQN_DNN(self.state_size, self.selected_size, self.remain_size, self.loading_size, self.cbm_size, self.nsup)\n",
+    "            self.target_model = DQN_DNN(self.state_size, self.selected_size, self.remain_size, self.loading_size, self.cbm_size, self.nsup)\n",
+    "        elif net == 'DDQN_CNNDNN':\n",
+    "            self.model = DQN_CNNDNN(self.state_size, self.selected_size, self.remain_size, self.loading_size, self.cbm_size, self.nsup)\n",
+    "            self.target_model = DQN_CNNDNN(self.state_size, self.selected_size, self.remain_size, self.loading_size, self.cbm_size, self.nsup)\n",
+    "        \n",
+    "        if net in ['DDQN_DNN', 'DDQN_CNNDNN']:\n",
+    "            print('distribution', net)\n",
+    "            self.dist = True\n",
+    "        \n",
+    "        self.optimizer = Adam(self.learning_rate)#, clipnorm=10.)\n",
+    "        # target model (init)\n",
+    "        self.update_target_model()\n",
+    "        self.avg_q_max, self.avg_loss = 0, 0\n",
+    "#         self.writer = tf.summary.create_file_writer('summary/bpp')\n",
+    "        self.model_path = os.path.join(os.getcwd(), 'save_model', 'model_3d')"
+   ]
   },
   {
    "cell_type": "code",
