--- a/3DBPP/ActorCritic/train_multi_agent.ipynb
+++ b/3DBPP/ActorCritic/train_multi_agent.ipynb
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6ab7c0c",
+   "id": "7c9d82f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,10 @@
     "        self.update_target_model()\n",
     "        self.avg_q_max, self.avg_loss = 0, 0\n",
     "#         self.writer = tf.summary.create_file_writer('summary/bpp')\n",
-    "        self.model_path = os.path.join(os.getcwd(), 'save_model', 'model_3d')"
+    "        self.model_path = os.path.join(os.getcwd(), 'save_model', 'model_3d')\n",
+    "    \n",
+    "    def update_target_model(self):\n",
+    "        self.target_model.set_weights(self.model.get_weights())"
    ]
   },
   {
