--- a/3DBPP/ActorCritic/train_multi_agent.ipynb
+++ b/3DBPP/ActorCritic/train_multi_agent.ipynb
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c9d82f9",
+   "id": "67460b2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,25 @@
     "        self.model_path = os.path.join(os.getcwd(), 'save_model', 'model_3d')\n",
     "    \n",
     "    def update_target_model(self):\n",
-    "        self.target_model.set_weights(self.model.get_weights())"
+    "        self.target_model.set_weights(self.model.get_weights())\n",
+    "        \n",
+    "    def get_action(self, state, loaded_mh_c, r_boxes, loading, cbm):\n",
+    "        if np.random.rand() <= self.epsilon:\n",
+    "            random_action = random.randrange(len(state))\n",
+    "            return random_action\n",
+    "        else:\n",
+    "            if self.dist:\n",
+    "                z = self.model.predict([state, loaded_mh_c, r_boxes, loading, cbm]) #(C,51)\n",
+    "                z_concat = np.vstack(z) #action output이 여러개 일때\n",
+    "                #q = np.sum(np.multiply(z_concat[:,45:], np.array(self.z)[45:]), axis=1) #(C,)\n",
+    "                q = np.sum(np.multiply(z_concat, np.array(self.z)), axis=1) #(C,)\n",
+    "                self.avg_q_max += np.amax(q)\n",
+    "                return np.argmax(q)\n",
+    "            else:\n",
+    "                q_values=self.model([state, loaded_mh_c, r_boxes, loading, cbm])\n",
+    "                armax_idx = np.where( q_values == tf.math.reduce_max(q_values))\n",
+    "                action_idx = armax_idx[0][0]\n",
+    "                return action_idx"
    ]
   },
   {
