--- a/3DBPP/ActorCritic/train_multi_agent.ipynb
+++ b/3DBPP/ActorCritic/train_multi_agent.ipynb
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67460b2a",
+   "id": "dba77823",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,19 @@
     "                q_values=self.model([state, loaded_mh_c, r_boxes, loading, cbm])\n",
     "                armax_idx = np.where( q_values == tf.math.reduce_max(q_values))\n",
     "                action_idx = armax_idx[0][0]\n",
-    "                return action_idx"
+    "                return action_idx\n",
+    "            \n",
+    "    def append_sample(self, history, load, remain_size, load_size, reward, last, t_history, t_load, t_remain_size, t_load_size, cbm,  t_cbm):\n",
+    "        self.memory.append(( history, load, remain_size, load_size, reward, last, t_history, t_load, t_remain_size, t_load_size, cbm, t_cbm))\n",
+    "        \n",
+    "        \n",
+    "#     def draw_tensorboard(self, reward, fill, step, episode):\n",
+    "#         with self.writer.as_default():\n",
+    "#             tf.summary.scalar('Total Reward/Episode', reward, step=episode)\n",
+    "#             tf.summary.scalar('Total Fill/Episode', fill, step=episode)\n",
+    "#             tf.summary.scalar('Average Max Q/Episode', self.avg_q_max / float(step), step=episode)\n",
+    "#             tf.summary.scalar('Duration/Episode', step, step=episode)\n",
+    "#             tf.summary.scalar('Average Loss/Episode', self.avg_loss / float(step), step=episode)"
    ]
   },
   {
