--- a/3DBPP/ActorCritic/train_multi_agent.ipynb
+++ b/3DBPP/ActorCritic/train_multi_agent.ipynb
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dba77823",
+   "id": "1d3b2bb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,97 @@
     "#             tf.summary.scalar('Total Fill/Episode', fill, step=episode)\n",
     "#             tf.summary.scalar('Average Max Q/Episode', self.avg_q_max / float(step), step=episode)\n",
     "#             tf.summary.scalar('Duration/Episode', step, step=episode)\n",
-    "#             tf.summary.scalar('Average Loss/Episode', self.avg_loss / float(step), step=episode)"
+    "#             tf.summary.scalar('Average Loss/Episode', self.avg_loss / float(step), step=episode)\n",
+    "\n",
+    "    def train_model(self):\n",
+    "        \n",
+    "        batch = random.sample(self.memory, self.batch_size)\n",
+    "        \n",
+    "        history = np.array([sample[0] for sample in batch])# (B, 20,20,2)\n",
+    "        load = np.array([sample[1] for sample in batch])# (B, 20,20,1)\n",
+    "        remain_size = np.array([sample[2] for sample in batch]) # (B, 20,20, max_num_remain)\n",
+    "        load_size = np.array([sample[3] for sample in batch]) # (B, 20, 20, K)\n",
+    "        reward = np.array([sample[4] for sample in batch]) # (B,)\n",
+    "        dones = np.array([sample[5] for sample in batch]) # (B,)\n",
+    "        len_t_comb = [ len(sample[6]) for sample in batch ]\n",
+    "        t_history = np.concatenate([sample[6] for sample in batch] )\n",
+    "        t_load = np.concatenate([sample[7] for sample in batch])\n",
+    "        t_remain_size = np.concatenate([sample[8] for sample in batch] )\n",
+    "        t_load_size = np.concatenate([sample[9] for sample in batch] )\n",
+    "        cbm = np.array([sample[10] for sample in batch] )\n",
+    "        t_cbm = np.concatenate([sample[11] for sample in batch] )\n",
+    "        #print(history.shape,load.shape,remain_size.shape, load_size.shape, reward.shape, dones.shape,  t_history.shape, t_load.shape, t_remain_size.shape, t_load_size.shape)\n",
+    "        \n",
+    "        model_params = self.model.trainable_variables\n",
+    "        with tf.GradientTape() as tape:\n",
+    "            if self.dist:\n",
+    "                # 예측\n",
+    "                predicts = self.model([history, load, remain_size, load_size, cbm]) # B,51\n",
+    "                # 타겟\n",
+    "#                 z_b = []\n",
+    "#                 for i in range(0,len(t_history), self.batch_size):\n",
+    "#                     e_idx = min( i + self.batch_size, len(t_history) )\n",
+    "#                     z = self.target_model([t_history[i:e_idx], t_load[i:e_idx], t_remain_size[i:e_idx], t_load_size[i:e_idx]]) #(C, 51)\n",
+    "#                     z_b.append(z)\n",
+    "#                 z_concat = np.vstack(z_b) #(B*c, 51)\n",
+    "                z_concat = self.target_model([t_history, t_load, t_remain_size, t_load_size, t_cbm])\n",
+    "                t_q = np.sum(np.multiply(z_concat, np.array(self.z)), axis=1) #(B*c, )\n",
+    "                # 가장 기댓값이 높은 action 선택\n",
+    "                next_actions, probs = [],[]\n",
+    "                for i in range(len(len_t_comb)):\n",
+    "                    s_idx = np.sum(len_t_comb[:i]).astype('int')\n",
+    "                    if len_t_comb[i] ==1:\n",
+    "                        n_a = 0\n",
+    "                    else:                        \n",
+    "                        n_a = np.argmax(t_q[s_idx: s_idx + len_t_comb[i]])\n",
+    "                    next_actions.append(n_a) #[32]\n",
+    "                    probs.append((z_concat[s_idx: s_idx + len_t_comb[i]])[n_a])\n",
+    "                probs = np.stack(probs) #(B, 51)\n",
+    "                # target distribution\n",
+    "                bj = np.round((reward - self.vmin)/self.dz) #(B,)\n",
+    "                #지지 성분의 색인\n",
+    "                bj = np.clip(bj, 0, self.nsup-1).astype('int') #유효한 범위\n",
+    "                targets = []\n",
+    "                for i in range(self.batch_size):\n",
+    "                    if dones[i]:\n",
+    "                        target_dist = np.zeros(self.nsup)\n",
+    "                        target_dist[bj[i]] = 1\n",
+    "                        targets.append(target_dist)\n",
+    "                    else:\n",
+    "                        m = probs[i].copy() #(51,)\n",
+    "                        j = 1\n",
+    "                        for i in range(bj[i],1,-1):\n",
+    "                            m[i] += np.power(self.gamma, j) * m[i-1]\n",
+    "                            j += 1\n",
+    "                        j = 1\n",
+    "                        for i in range(bj[i], self.nsup-1,1):\n",
+    "                            m[i] += np.power(self.gamma, j) * m[i+1]\n",
+    "                            j += 1\n",
+    "                        m /= m.sum() #(51,)\n",
+    "                        targets.append(m)\n",
+    "                loss = self.criterion(targets, predicts)\n",
+    "            else: \n",
+    "                # 예측\n",
+    "                predicts = self.model([history, load, remain_size, load_size]) #(B, 1)\n",
+    "                # 타겟\n",
+    "                targets = []\n",
+    "                for i in range(self.batch_size):\n",
+    "                    t_q = self.target_model([t_history[i], t_load[i], t_remain_size[i], t_load_size[i], t_cbm[i]]) # target q value\n",
+    "                    t_max_q = tf.math.reduce_max(t_q)\n",
+    "                    targets.append([(1- 0.75)*reward[i] + (1 - dones[i]) *0.75*t_max_q])\n",
+    "                targets=np.array(targets) #(B, 1)\n",
+    "                # loss 계산\n",
+    "                #loss = tf.reduce_mean(tf.square(targets - predicts))\n",
+    "                error = tf.abs(targets - predicts)\n",
+    "                quadratic_part = tf.clip_by_value(error, 0.0, 1.0)\n",
+    "                linear_part = error - quadratic_part\n",
+    "                loss = tf.reduce_mean(0.5 * tf.square(quadratic_part) + linear_part)\n",
+    "            \n",
+    "            self.avg_loss += loss.numpy()\n",
+    "            \n",
+    "        # update\n",
+    "        grads = tape.gradient(loss, model_params)\n",
+    "        self.optimizer.apply_gradients(zip(grads, model_params))"
    ]
   },
   {
