--- a/3DBPP/ActorCritic/train_multi_agent.ipynb
+++ b/3DBPP/ActorCritic/train_multi_agent.ipynb
@@ -50,11 +50,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d3b2bb2",
+   "id": "24a73d80",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DQNAgent:\n",
+    "class DQNAgent_bbox:\n",
     "    def __init__(self, L=20, B=20, H=20, n_remains = 5, n_loading=3, n_channel = 6, max_size = 64,\n",
     "                 lr=1e-8, batch_size = 32, exp_steps=500, train_st = 200, memory_len=500, update_target_rate = 30, net='DNN' ):\n",
     "        self.state_size = (L, B, 3)\n",
@@ -346,6 +346,10 @@
     "env = Bpp3DEnvMS(length = mxl, breadth = mxb, height = mxh, bbox_type = bbox_type)\n",
     "# Agent\n",
     "agent = DQNAgent( L = mxl, B = mxb , H = mxh, n_remains = num_max_remain, n_loading=K, n_channel = n_channel, max_size = max_size,\n",
+    "                 lr=args['lr'], batch_size = args['batch_size'], exp_steps=args['exp_steps'], train_st = args['train_st'], \n",
+    "                 memory_len=args['memory_len'], update_target_rate = args['update_target_rate'], net = args['net']) #DDQN_CNNDNN\n",
+    "\n",
+    "bbox_agent = DQNAgent_bbox( L = mxl, B = mxb , H = mxh, n_remains = num_max_remain, n_loading=K, n_channel = n_channel, max_size = max_size,\n",
     "                 lr=args['lr'], batch_size = args['batch_size'], exp_steps=args['exp_steps'], train_st = args['train_st'], \n",
     "                 memory_len=args['memory_len'], update_target_rate = args['update_target_rate'], net = args['net']) #DDQN_CNNDNN"
    ]
