--- a/3DBPP/ActorCritic/train_multi_agent.ipynb
+++ b/3DBPP/ActorCritic/train_multi_agent.ipynb
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24a73d80",
+   "id": "f3efa0dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5244,8 +5244,11 @@
     "    else:\n",
     "        if e > 9000:\n",
     "            agent.epsilon = 0\n",
+    "            bbox_agent.epsilon = 0\n",
     "        if agent.epsilon > agent.epsilon_end and len(agent.memory)>=agent.train_start:\n",
     "            agent.epsilon -= agent.epsilon_decay_step\n",
+    "        if bbox_agent.epsilon > bbox_agent.epsilon_end and len(bbox_agent.memory)>=bbox_agent.train_start:\n",
+    "            bbox_agent.epsilon -= bbox_agent.epsilon_decay_step\n",
     "           \n",
     "    boxes_all_sc = boxes_multi_sc[ ith_data].copy().astype('int')# \n",
     "    cbm_all = cbm_per_mbox[ith_data].copy()\n",
